# callwire

./: .gitignore  LICENSE  MOAT.md  README.md  SPEC.md  callwire.toml  session-ses_0c47.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
benchmarks/: compare_grpc.md  run.sh
c/: CMakeLists.txt  CallwireCoreConfig.cmake.in  IMPLEMENTATION_STATUS.md  README.md
c/include/: callwire.h
c/src/: cli.c  client.c  codec.c  convenience.c  errors.c  framing.c  internal.h  server.c  tls.c
c/tests/: test_codec.c  test_convenience.c  test_framing.c  test_loopback.c  test_streaming.c
cobol/: README.md  build.sh
cobol/copybooks/: CALLWIRE.cpy
cobol/src/: cobol_shim.c
cobol/tests/: test_loopback.cob  test_server.cob  verify_server.c
cobol/tests/handlers/: add_handler.cob
cpp/: CMakeLists.txt
cpp/include/callwire/: callwire.hpp
cpp/tests/: test_loopback.cpp
examples/: README.md  demo.sh  python_all.py
examples/1_standalone/: README.md  cobol_client.cob  cobol_server.cob  cpp_client.cpp  cpp_server.cpp  go_server.go  java_client.java  java_server.java  python_client.py  rust_client.rs  swift_client.swift  swift_server.swift  ts_client.ts
examples/1_standalone/cobol_handlers/: greet_handler.cob
examples/2_orchestrated/: README.md  demo.py
examples/matrix/: callwire.toml  export_python.py  export_ts.ts  import_python.py  import_ts.ts
examples/matrix/c/: callwire.toml  export_c.c  import_c.c
examples/matrix/cobol/: callwire.toml  export_cobol.cob  import_cobol.cob
examples/matrix/cobol/handlers/: add_handler.cob
examples/matrix/cpp/: callwire.toml  export_cpp.cpp  import_cpp.cpp
examples/matrix/export_java/: MatrixExportJava.java
examples/matrix/go/: callwire.toml  export_go.go  go.mod  go.sum  import_go.go
examples/matrix/java/: MatrixImportJava.java  callwire.toml
examples/matrix/python/: callwire.toml  export_python.py  import_python.py
examples/matrix/rust/: Cargo.toml  callwire.toml
examples/matrix/rust/src/: bin_export_rust.rs  bin_import_rust.rs
examples/matrix/swift/: callwire.toml  export_swift.swift  import_swift.swift
examples/matrix/ts/: callwire.toml  export_ts.ts  import_ts.ts
go/callwire/: batch.go  batch_test.go  bench_test.go  bench_test.go.bak  callwire_test.go  client.go  close_test.go  codec.go  errors.go  export_test.go  framing.go  go.mod  go.sum  grpc_bench_test.go  integration_test.go  orchestration.go  ref_test.go  registry.go  registry_test.go  rust_integration_test.go  server.go  server_test.go  streaming_test.go  tls.go  tls_test.go  void_test.go
go/callwire/.callwire/: pids
go/callwire/cmd/all/: main.go
go/callwire/cmd/callwire/: main.go
go/callwire/cmd/httpserver/: main.go
go/callwire/grpcbenchpb/: bench.pb.go  bench.proto  bench_grpc.pb.go
java/: README.md  pom.xml
java/src/main/java/dev/callwire/cli/: Main.java
java/src/main/java/dev/callwire/core/: Client.java  Codec.java  Framing.java  Server.java
java/src/test/java/dev/callwire/: ClientTest.java
python/: bench.py  pyproject.toml  requirements.txt  test_batch.py  test_client.py  test_registry.py  test_self.py  test_smoke.py  test_streaming.py  test_tls.py
python/callwire/: __init__.py  __main__.py  client.py  codec.py  errors.py  framing.py  orchestration.py  ref.py  registry.py  server.py
rust/: Cargo.toml
rust/benches/: bench.rs
rust/examples/: cross_lang_client.rs  cross_lang_server.rs  orchestrated_rust_worker.rs
rust/src/: client.rs  codec.rs  errors.rs  framing.rs  lib.rs  orchestration.rs  registry.rs  server.rs  tls.rs
rust/tests/: integration_test.rs  registry_test.rs  tls_test.rs
scripts/: bump-version.sh
swift/: Package.swift  README.md  build.sh
swift/Sources/CCallwire/: README.md  client.c  codec.c  framing.c  internal.h  server.c
swift/Sources/CCallwire/include/: callwire.h  module.modulemap
swift/Sources/Callwire/: Callwire.swift
swift/Tests/CallwireTests/: LoopbackTests.swift
ts/: bench.ts  package-lock.json  package.json  tsconfig.json
ts/examples/: simple_ts_client.ts
ts/src/: cli.ts  client.ts  codec.ts  framing.ts  index.ts  orchestration.ts  server.ts
ts/tests/: client.test.ts  interop.test.ts
