[package]
name = "callwire"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
rmpv = { version = "1.0", features = ["with-serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
futures-util = "0.3"
bytes = "1.5"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"

[dev-dependencies]
tokio-test = "0.4"
rcgen = "0.13"
